# welcomehome

./: LICENSE  README.md  schema.sql
backend/: pyproject.toml
backend/backend/: config.py  db.py  main.py  security.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  style.css
frontend/src/components/: AddToOrder.js  Donate.js  FindItem.js  FindOrder.js  Home.js  HomeIcon.js  Login.js  NotFound.js  OrderDetails.js  Register.js  StartOrder.js
